/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.runtime.v1;

import "gogoproto/gogo.proto";

// The registry service provides control functions for the runtime.
service Registry {
    rpc PushDriver(stream PushDriverRequest) returns (PushDriverResponse);
    rpc PullDriver(PullDriverRequest) returns (stream PullDriverResponse);
}

message DriverInfo {
    string name = 1;
    string version = 2;
}

message RuntimeInfo {
    string version = 1;
}

message PluginHeader {
    DriverInfo driver = 1 [
        (gogoproto.nullable) = false
    ];
    RuntimeInfo runtime = 2 [
        (gogoproto.nullable) = false
    ];
}

message PluginChunk {
    bytes data = 1;
}

message PluginTrailer {
    string checksum = 1;
}

message PullDriverRequest {
    PluginHeader header = 1;
}

message PullDriverResponse {
    oneof response {
        PluginChunk chunk = 1;
        PluginTrailer trailer = 2;
    }
}

message PushDriverRequest {
    oneof request {
        PluginHeader header = 1;
        PluginChunk chunk = 2;
        PluginTrailer trailer = 3;
    }
}

message PushDriverResponse {

}
